sdm845-common: overlay: Limit screen recorder to 60fps
Change-Id: I8b1d36bf2350d6b5218f063cd9981ebb1e4598a2
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: XtremeOrnob <xtreme.ornob@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -375,4 +375,6 @@
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
 
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">60</integer>
 </resources>
